# lost-purpose

./: .codecov.yml  .gitattributes  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  diesel.toml
ascender/: Cargo.toml  LICENSE
ascender/src/: chaxel.rs  lib.rs  output.rs
backend/: Cargo.toml
backend/src/: false_name.rs  main.rs
frontend/: .travis.yml  asciify.js  jest.config.js  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js
frontend/__mocks__/: rawMock.js
frontend/assets/: README.md  scrape_rws.py  tarot_interpretations.json
frontend/assets/neon-moon/: 00.png.gpg  01-cups.png.gpg  01-pents.png.gpg  01-swords.png.gpg  01-wands.png.gpg  01.png.gpg  02.png.gpg  (+73 more)
frontend/src/: app.tsx  art_finder.ts  art_finder.tsx  card_art_viewer.tsx  card_formatter.spec.ts  card_formatter.spec.tsx  card_formatter.tsx  cards.spec.tsx  cards.tsx  crc-32.d.ts  deck.spec.ts  deck.spec.tsx  deck.tsx  deck_element.tsx  deck_list.tsx  draw_result.tsx  index.tsx  interpret.spec.tsx  interpret.tsx  interpretation_view.tsx  lfsr.spec.ts  lfsr.ts  login.tsx  meaning.spec.tsx  new_deck_dialog.tsx  prompter.tsx  romanize.d.ts  shuffle.test.tsx  shuffle.tsx
migrations/2018-06-18-005445_create_users/: up.sql
migrations/2018-06-19-000922_create_decks_table/: down.sql  up.sql
src/: auth.rs  card.rs  chaxel.rs  db.rs  db_test.rs  deck.rs  lfsr.rs  lib.rs  main.rs  model.rs  output.rs  pile.rs  route_util.rs  routes.rs  schema.rs
src/model/: auth.rs  card.rs  deck.rs  mod.rs
src/routes/: auth.rs  deck.rs  mod.rs  static_file.rs  test_utils.rs
(+48 files in other folders)
