[package]
name = "skarot"
version = "0.1.0"
authors = ["Astra <deifacted@users.noreply.github.com>"]

[dependencies]
byteorder = "1.2"
chrono = "0.4"
diesel = { version = "1.3", features = ["sqlite", "chrono"] }
diesel_migrations = { version = "1.3" }
failure = "0.1"
itertools = "0.7"
lazy_static = "1.0"
rand_core = "0.2"
rand = "0.5"
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.2"